--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
 	 
 	 
 	color: #000;
-	background-image: url(https://i.imgur.com/U7VeJta.jpg);	 
+	background-image: url(https://pentagondealergroup.github.io/ebay/navbg.jpg);	 
 	font-size: 14px !important; 
 }
 .midnav .navbar-nav a:hover, .midnav .navbar-nav a:focus/* mid navigation bar colour style */ {
@@ -101,7 +101,7 @@
 }
 .footer1 { /*footer bg*/
 	 
-	background-image: url(https://i.imgur.com/TtTIF6b.png) !important;
+	background-image: url(https://pentagondealergroup.github.io/ebay/footer.jpg) !important;
 }
 .footerl .col-sm-6:nth-child(2) {
 	color:green !important
@@ -110,7 +110,7 @@
 
 
 .container {font-family: 'Muli', serif;}
-.wrap {background:url("https://i.imgur.com/ocImOCw.png") top repeat-x;}
+.wrap {background:url("https://pentagondealergroup.github.io/ebay/headerbg.png") top repeat-x;}
 .header {background-color:# ; height:97px; padding-top:10px;}
 .navbg, .topnav a, .midnav a {background-color:# ;}
 .cw, .cw a {color:white;}
@@ -126,9 +126,9 @@
 .navnxt {background:url(" ") repeat ; padding-top:15px; padding-bottom:11px;}
 .navnxt p {font-size:11px; clear:both; line-height:0px; color:#727272;}
 .fast, .rated, .range {padding-left:10px; text-align:center;}
-.fast {background:url("https://i.imgur.com/P5LMAYK.png") 15% center no-repeat;}
-.rated {background:url("https://i.imgur.com/6dVvlpy.png") 15% center no-repeat;}
-.range {background:url("https://i.imgur.com/TA5YD1k.png") 15% center no-repeat;}
+.fast {background:url("https://pentagondealergroup.github.io/ebay/ship.png") 15% center no-repeat;}
+.rated {background:url("https://pentagondealergroup.github.io/ebay/star.png") 15% center no-repeat;}
+.range {background:url("https://pentagondealergroup.github.io/ebay/range.png") 15% center no-repeat;}
 
 .thumbnail a {width:33%; margin:21px auto; text-align:center; display:inline-block;}
 
@@ -138,13 +138,13 @@
 .product .large {text-align:center; margin-bottom:10px;}
 .samed {background:url("https://primesellability.com/pentagon2/dispatch.png") 3% center no-repeat #edf7f5; margin-top:40px; padding:10px 0 10px 60px; line-height:20px; font-size:13px; font-weight:normal}
 
-.supportbg {background:url("https://i.imgur.com/3CVIi5G.jpg") repeat; padding:20px 0 30px;}
+.supportbg {background:url("https://pentagondealergroup.github.io/ebay/supportbg.jpg") repeat; padding:20px 0 30px;}
 .support, .quality, .bestpr, .ukbase {padding:35px; display:block}
 .supbrdr {border-right:1px solid #ccc;}
-.support {background:url("https://i.imgur.com/cJbeIth.png") center no-repeat;}
-.quality {background:url("https://i.imgur.com/7HxyD7R.png") center no-repeat;}
-.bestpr {background:url("https://i.imgur.com/NJIkYIS.png") center no-repeat;}
-.ukbase {background:url("https://i.imgur.com/Fd2HQJ1.png") center no-repeat;}
+.support {background:url("https://pentagondealergroup.github.io/ebay/support.png") center no-repeat;}
+.quality {background:url("https://pentagondealergroup.github.io/ebay/quality.png") center no-repeat;}
+.bestpr {background:url("https://pentagondealergroup.github.io/ebay/price.png") center no-repeat;}
+.ukbase {background:url("https://imgur.com/Fd2HQJ1") center no-repeat;}
 
 .item-title {margin-top: 10px; margin-bottom: 5px; font-size:15px; font-weight:normal; text-align:center;}
 .item-desc {text-align:center; font-size:11px; color:#999}
@@ -156,7 +156,7 @@
 .list-unstyled li a:hover {color:#ccc; text-decoration:none;}
 .list-inline { padding-left: 0; list-style: none;}
 .list-inline > li { display: inline-block;}
-.star {background:url("https://i.imgur.com/zD8UX5v.png") center no-repeat; padding:22px;}
+.star {background:url("https://pentagondealergroup.github.io/ebay/stars.png") center no-repeat; padding:22px;}
 .intro {font-size:11px;}
 .footerl {padding:15px 10px; font-size:12px; background-color:#202020;}
 .copy {padding:10px; font-size:10px; color:#999; font-family:sans-serif;}
@@ -164,8 +164,8 @@
 .tabhvr {color:#712557;}
 .tabtxt {color:#5a5a5a;}
 
-footer {background:url("https://i.imgur.com/xlWl3sY.jpg") top repeat ;}
-footer .prplbg {background:url("https://i.imgur.com/TtTIF6b.png") repeat; padding-top:5px; padding-bottom:40px;}
+footer {background:url("https://pentagondealergroup.github.io/ebay/footerbg.png") top repeat ;}
+footer .prplbg {background:url("https://pentagondealergroup.github.io/ebay/footer.jpg") repeat; padding-top:5px; padding-bottom:40px;}
 
 .banner {text-align:center;}
 .banner img {width:98%; margin:0 auto;}
