--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@
 .support {background:url("https://pentagondealergroup.github.io/ebay/support.png") center no-repeat;}
 .quality {background:url("https://pentagondealergroup.github.io/ebay/quality.png") center no-repeat;}
 .bestpr {background:url("https://pentagondealergroup.github.io/ebay/price.png") center no-repeat;}
-.ukbase {background:url("https://imgur.com/Fd2HQJ1") center no-repeat;}
+.ukbase {background:url("https://pentagondealergroup.github.io/ebay/uk.png") center no-repeat;}
 
 .item-title {margin-top: 10px; margin-bottom: 5px; font-size:15px; font-weight:normal; text-align:center;}
 .item-desc {text-align:center; font-size:11px; color:#999}
